base workspace layout and icon font

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,10 @@ html
     title='Boilerplate'
     link(
       rel='stylesheet'
+      href='/styles/fonts.css'
+    )
+    link(
+      rel='stylesheet'
       href= app.style
     )
   body
